# vala

./: meson.build
ccode/: meson.build
codegen/: meson.build  valaccodebasemodule.vala  valaccodemethodmodule.vala  valagasyncmodule.vala  valagdbusclientmodule.vala
gee/: meson.build
vala/: meson.build  valamethod.vala  valamethodcall.vala  valaobjectcreationexpression.vala
vapi/: gio-2.0.vapi
